DevOps-Toolchain/sonarqube/not-helm/sonar-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  labels:
    app: sonarqube
spec:
  externalTrafficPolicy: Cluster
  selector:
    app: sonarqube
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9000
