DevOps-Toolchain/sonarqube/not-helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #cert-manager.io/issue-temporary-certificate: "true"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    #acme.cert-manager.io/http01-edit-in-place: "true"
  name: sonarqube
spec:
  tls:
  - hosts:
    - sonarqube.codeops.cf
    secretName: sonarqube-tls
  rules:
  - host: sonarqube.codeops.cf
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarqube
            port:
              number: 80
